[package]
name = "tokenx"
version = "0.1.0"
description = "Tokenx — ERC-3643 equivalent security token factory for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tokenx"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang  = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl   = { version = "0.32.1", features = ["token-2022", "associated-token"] }
spl-token-2022              = { version = "6.0", features = ["no-entrypoint"] }
spl-tlv-account-resolution  = "0.7"
spl-transfer-hook-interface = "0.7"
transfer-hook               = { path = "../transfer-hook", features = ["cpi"], optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
