[package]
name = "transfer-hook"
version = "0.1.0"
description = "Tokenx compliance transfer hook for SPL Token-2022"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang  = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl   = { version = "0.32.1", features = ["token-2022"] }
spl-token-2022              = { version = "6.0", features = ["no-entrypoint"] }
spl-tlv-account-resolution  = "0.7"
spl-transfer-hook-interface = "0.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
